# fluxcraft

./: .gitignore  README.md  Session.vim  crates.md  pipeline.md
.github/workflows/: build-backbone.yml  build-wasm-backbone.yml  build-wasm-ui.yml  publish-gradle.yml
fluxcraft-java/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
fluxcraft-java/fluxcraft/: build.gradle.kts
fluxcraft-java/fluxcraft-annotation/: build.gradle.kts
fluxcraft-java/fluxcraft-annotation-api/: build.gradle.kts
fluxcraft-java/fluxcraft-annotation-api/src/main/java/org/fluxcraft/annotation/api/: FluxcraftComponent.java
fluxcraft-java/fluxcraft-annotation/src/main/java/org/fluxcraft/annotation/: FluxcraftComponentProcessor.java
fluxcraft-java/fluxcraft/src/main/java/org/fluxcraft/: Main.java
fluxcraft-java/fluxcraft/src/main/java/org/fluxcraft/example/: CreateStuffCommand.java  SomeService.java
fluxcraft-java/fluxcraft/src/main/java/org/fluxcraft/lib/: FluxcraftComponent.java
fluxcraft-java/fluxcraft/src/main/java/org/fluxcraft/lib/core/: Column.java  DataFrame.java  FluxCraft.java  FluxCraftEntity.java  FluxCraftRegistry.java  Fluxcraft.java  Pipeline.java  ReadArrow.java
fluxcraft-java/fluxcraft/src/main/java/org/fluxcraft/lib/dev/: FluxcraftDevTools.java
fluxcraft-java/fluxcraft/src/main/java/org/fluxcraft/lib/util/: ExtractUtil.java
fluxcraft-java/fluxcraft/src/main/resources/: log4j2.xml
fluxcraft-java/fluxcraft/src/test/java/org/fluxcraft/: AppTest.java  DevToolsTest.java  FlowTest.java
fluxcraft-rs/: Cargo.toml
fluxcraft-rs/crates/fluxcraft-core/: Cargo.toml
fluxcraft-rs/crates/fluxcraft-core/src/: constants.rs  error.rs  function_registry.rs  lib.rs  wrapper.rs
fluxcraft-rs/crates/fluxcraft-dev/: Cargo.toml
fluxcraft-rs/crates/fluxcraft-dev/src/: lib.rs  main.rs
fluxcraft-rs/crates/fluxcraft-io/: Cargo.toml
fluxcraft-rs/crates/fluxcraft-io/src/: lib.rs
fluxcraft-rs/crates/fluxcraft-jni/: Cargo.toml
fluxcraft-rs/crates/fluxcraft-jni/src/: lib.rs
fluxcraft-rs/crates/fluxcraft-pipeline/: Cargo.toml
fluxcraft-rs/crates/fluxcraft-pipeline/src/: main.rs  pipeline.rs
fluxcraft-rs/crates/fluxcraft-wasm/: Cargo.toml
fluxcraft-rs/crates/fluxcraft-wasm/src/: dataframe_js.rs  js_fluxcraft.rs  lib.rs
fluxcraft-ui/: package-lock.json  package.json  vite.config.ts
fluxcraft-ui/src/: App.tsx
fluxcraft-ui/src/assets/: chalk.project.json  dark.project.json
fluxcraft-ui/src/components/: Chart.tsx  DataFrameViewer.tsx  DataframeOverviewCard.tsx  FileUpload.tsx  JsonFetch.tsx  MenuDrawer.tsx  PipelineDrawer.tsx  SettingsCard.tsx  SqlHistoryCard.tsx  TitleEditor.tsx  TransformCard.tsx  UploadCard.tsx
fluxcraft-ui/src/hooks/: useDataFrameRenderer.tsx  useSqlCompletions.ts
fluxcraft-ui/src/pages/: Home.tsx
fluxcraft-ui/src/stores/: Store.ts
fluxcraft-ui/src/stores/slices/: HistorySlice.ts  SettingsSlice.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DataFrameViewer.tsx  DataframeOverviewCard.tsx  EnvironmentCard.tsx  FileUpload.tsx  JsonFetch.tsx  Pipeline.tsx  PipelineDrawer.tsx  QueryCard.tsx  QueryEditor.tsx  Table.tsx  TransformCard.tsx  TransformPipeline.tsx  UploadCard.tsx
frontend/src/hooks/: useDataFrameRenderer.tsx  useSqlCompletions.ts
frontend/src/pages/: About.tsx  Contact.tsx  Home.tsx  Success.tsx
frontend/src/stores/: Store.ts
frontend/src/stores/slices/: EnvSlice.ts  FileSlice.ts
polars-wasm/: Cargo.toml  README.md
polars-wasm/src/: lib.rs  main.rs
polars-wasm/src/bindgens/: dataframe_js.rs  mod.rs
polars-wasm/src/core/: error.rs  function_registry.rs  http_client.rs  mod.rs  udf.rs  wrapper.rs
polars-wasm/src/core/pipeline/: mod.rs
resources/: example_pipeline.json  example_pipeline_2.json  example_pipeline_3.json  example_pipeline_4.json  example_pipeline_4_new.json  output.csv
resources/datasets/: Pokemon_small.csv  customers.csv  customers2.csv  dtypes.xlsx  gendata.py  non_normalized_customers.csv  non_normalized_customers_small.csv  non_normalized_data.xlsx  orders.csv  realistic_fake_api_keys.csv  structs.csv  unnormalized.csv
