[workspace.package]
name = "fluxcraft-rs"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
fluxcraft-core = { version = "0.1.0", path = "crates/fluxcraft-core" }
fluxcraft-io = { version = "0.1.0", path = "crates/fluxcraft-io" }
fluxcraft-pipeline = { version = "0.1.0", path = "crates/fluxcraft-pipeline" }
polars-core = {git = "https://github.com/andem20/polars-fork", features = ["fmt_no_tty", "dtype-datetime", "dtype-date", "serde"]}
polars-io = {git = "https://github.com/andem20/polars-fork", features = ["dtype-datetime", "dtype-date", "json"]}
polars-lazy = {git = "https://github.com/andem20/polars-fork"}
polars-schema = {git = "https://github.com/andem20/polars-fork"}
polars-sql = {git = "https://github.com/andem20/polars-fork", features = ["json", "semi_anti_join"]}
polars-arrow = {git = "https://github.com/andem20/polars-fork", features = ["io_ipc"]}

[workspace]
members = [
    "crates/*",
]
