[package]
name = "polars-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calamine = "0.29.0"
chrono = "0.4.41"
polars-core = {version = "0.48.0", features = ["fmt_no_tty", "dtype-datetime", "dtype-date"]}
polars-io = {version = "0.48.0", features = ["dtype-datetime", "dtype-date", "json"]}
polars-lazy = "0.48.0"
polars-sql = "0.48.0"
wasm-bindgen = "0.2.100"
