[package]
name = "polars-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calamine = {version = "0.30.0", features = ["dates"]}
chrono = "0.4.41"
polars-core = {git = "https://github.com/andem20/polars-fork", features = ["fmt_no_tty", "dtype-datetime", "dtype-date", "serde"]}
polars-io = {git = "https://github.com/andem20/polars-fork", features = ["dtype-datetime", "dtype-date", "json"]}
polars-lazy = {git = "https://github.com/andem20/polars-fork"}
polars-schema = {git = "https://github.com/andem20/polars-fork"}
polars-sql = {git = "https://github.com/andem20/polars-fork", features = ["json"]}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3", features = ["wasm_js"] }
reqwest = "0.12.23"
serde_json = "1.0.143"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47.1", features = ["time"] }
